syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/sheginabo/go-quick-grpc/internal/pb";

message HelloRequest {
  string message = 1;
}

message HelloResponse {
  string message = 1;
  google.protobuf.Timestamp timestamp = 2;
  int64 timestampMilli = 3;
}